--- a/public/home.html
+++ b/public/home.html
@@ -13,6 +13,206 @@
 	<link rel="stylesheet" type="text/css" href="assets/fontawesome/css/all.min.css">
 </head>
 <body>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-success">
+		<div class="container">
+			<a class="navbar-brand" href="/">Mercadinho Ligeirinho</a>
+			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbar">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbar">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="/">Início</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Produtos</a>
+					</li>
+				</ul>
+			</div>
+			<form class="form-inline">
+				<div class="input-group">
+					<input type="search" class="form-control" id="search-item" placeholder="Buscar..." size="30">
+					<div class="input-group-prepend">
+						<label for="search-item">
+							<span class="input-group-text"> <i class="fas fa-search"></i> </span>
+						</label>
+					</div>
+				</div>
+			</form>
+		</div>
+	</nav>
+	<div class="jumbotron jumbotron-fluid">
+		<div class="container">
+			<h1 class="display-4">Melhores da Semana</h1>
+			<p class="lead">Estes produtos foram especialmente selecionados para <b>você</b></p>
+			<hr class="my-4">
+		</div>
+		<div class="carousel slide" data-ride="carousel" id="carousel">
+			<div class="container">
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<div class="row">
+							<div class="col-1"></div>
+							<div class="col-sm-3">
+								<div class="card">
+									<img class="card-img-top" src="img/product-image-placeholder.jpg">
+									<div class="card-body">
+										<h5 class="card-title">Nome do Produto</h5>
+										<p class="card-text">R$ 00,00</p>
+										<a href="#" class="btn btn-success">Comprar</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="card">
+									<img class="card-img-top" src="img/product-image-placeholder.jpg">
+									<div class="card-body">
+										<h5 class="card-title">Nome do Produto</h5>
+										<p class="card-text">R$ 00,00</p>
+										<a href="#" class="btn btn-success">Comprar</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="card">
+									<img class="card-img-top" src="img/product-image-placeholder.jpg">
+									<div class="card-body">
+										<h5 class="card-title">Nome do Produto</h5>
+										<p class="card-text">R$ 00,00</p>
+										<a href="#" class="btn btn-success">Comprar</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div class="row">
+							<div class="col-1"></div>
+							<div class="col-sm-3">
+								<div class="card">
+									<img class="card-img-top" src="img/product-image-placeholder.jpg">
+									<div class="card-body">
+										<h5 class="card-title">Nome do Produto</h5>
+										<p class="card-text">R$ 00,00</p>
+										<a href="#" class="btn btn-success">Comprar</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="card">
+									<img class="card-img-top" src="img/product-image-placeholder.jpg">
+									<div class="card-body">
+										<h5 class="card-title">Nome do Produto</h5>
+										<p class="card-text">R$ 00,00</p>
+										<a href="#" class="btn btn-success">Comprar</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="card">
+									<img class="card-img-top" src="img/product-image-placeholder.jpg">
+									<div class="card-body">
+										<h5 class="card-title">Nome do Produto</h5>
+										<p class="card-text">R$ 00,00</p>
+										<a href="#" class="btn btn-success">Comprar</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div class="row">
+							<div class="col-1"></div>
+							<div class="col-sm-3">
+								<div class="card">
+									<img class="card-img-top" src="img/product-image-placeholder.jpg">
+									<div class="card-body">
+										<h5 class="card-title">Nome do Produto</h5>
+										<p class="card-text">R$ 00,00</p>
+										<a href="#" class="btn btn-success">Comprar</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="card">
+									<img class="card-img-top" src="img/product-image-placeholder.jpg">
+									<div class="card-body">
+										<h5 class="card-title">Nome do Produto</h5>
+										<p class="card-text">R$ 00,00</p>
+										<a href="#" class="btn btn-success">Comprar</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="card">
+									<img class="card-img-top" src="img/product-image-placeholder.jpg">
+									<div class="card-body">
+										<h5 class="card-title">Nome do Produto</h5>
+										<p class="card-text">R$ 00,00</p>
+										<a href="#" class="btn btn-success">Comprar</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+				<span class="carousel-control-next-icon"></span>
+			</a>
+			<a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon"></span>
+			</a>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-12 mb-3"><hr></div>
+			<div class="col-sm-4">
+				<h3>Sobre o Site</h3>
+				<p>Solicitado pela ETEC Salles Gomes, pelo Prof. Gabriel Prestes Americo para compor menção do quarto bimestre.</p>
+				<p>Este site é de autoria de Henrique Miranda Carvalho e Kaio Malek Moreira. Muito Obrigado por visitar.</p>
+			</div>
+			<div class="col-sm-4">
+				<h3>Menu</h3>
+				<div class="list-group text-center">
+					<a class="list-group-item list-group-item-action list-group-item-primary" href="#">Voltar ao Topo</a>
+					<a class="list-group-item list-group-item-action list-group-item-primary" href="#">Produtos</a>
+					<a class="list-group-item list-group-item-action list-group-item-primary" data-toggle="modal" data-target="#modal" href="#">Localização</a>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<h3>Social</h3>
+				<div class="btn-group-vertical btn-block btn-group-lg" role="group">
+					<a class="btn btn-outline-primary" href="#"><i class="fab fa-facebook-square"></i> Facebook</a>
+					<a class="btn btn-outline-info" href="#"><i class="fab fa-twitter"></i> Twitter</a>
+					<a class="btn btn-outline-warning" href="#"><i class="fab fa-instagram"></i> Instagram</a>
+				</div>
+			</div>
+			<div class="col-12 mt-5">
+				<blockquote class="blockquote text-center">
+					<p class="mb-0">"Estudar é como conhecer mundos diferentes. É tempo de novidade a cada dia, tempo de alegria a cada hora. Tempo de se preparar para a vida..."</p>
+					<footer class="blockquote-footer">Albert Einstein <cite title="Source Title"> (1879-1955)</cite></footer>
+				</blockquote>
+			</div>
+		</div>
+	</div>
+	<div class="modal fade" id="modal">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<div class="modal-title">Localização</div>
+					<button class="close" data-dismiss="modal">&times</button>
+				</div>
+				<div class="modal-body">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3170.5806727730705!2d-47.845902047911736!3d-23.346979773870046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c5d92ba0c5107d%3A0x7ed3c17aec5ab394!2sETEC+Sales+Gomes!5e0!3m2!1spt-BR!2sbr!4v1539992285845" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-danger" data-dismiss="modal">Fechar</button>
+				</div>
+			</div>
+		</div>
+	</div>
 	<!--JavaScript-->
 	<script type="text/javascript" src="assets/js/jquery.min.js"></script>
 	<script type="text/javascript" src="assets/js/bootstrap.bundle.min.js"></script>
