--- a/public/home.html
+++ b/public/home.html
@@ -198,14 +198,14 @@
 		</div>
 	</div>
 	<div class="modal fade" id="modal">
-		<div class="modal-dialog">
+		<div class="modal-dialog modal-lg">
 			<div class="modal-content">
 				<div class="modal-header">
 					<div class="modal-title">Localização</div>
 					<button class="close" data-dismiss="modal">&times</button>
 				</div>
 				<div class="modal-body">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3170.5806727730705!2d-47.845902047911736!3d-23.346979773870046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c5d92ba0c5107d%3A0x7ed3c17aec5ab394!2sETEC+Sales+Gomes!5e0!3m2!1spt-BR!2sbr!4v1539992285845" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3170.5806727730705!2d-47.845902047911736!3d-23.346979773870046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c5d92ba0c5107d%3A0x7ed3c17aec5ab394!2sETEC+Sales+Gomes!5e0!3m2!1spt-BR!2sbr!4v1539992285845" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>
 				<div class="modal-footer">
 					<button class="btn btn-danger" data-dismiss="modal">Fechar</button>
