--- a/public/home.html
+++ b/public/home.html
@@ -171,7 +171,7 @@
 			<div class="col-sm-4">
 				<h3>Sobre o Site</h3>
 				<p>Solicitado pela ETEC Salles Gomes, pelo Prof. Gabriel Prestes Americo para compor menção do quarto bimestre.</p>
-				<p>Este site é de autoria de Henrique Miranda Carvalho e Kaio Malek Moreira. Muito Obrigado por visitar.</p>
+				<p>Este site é de autoria de Henrique Miranda Carvalho e Kaio Eduardo Malek Moreira. Muito Obrigado por visitar.</p>
 			</div>
 			<div class="col-sm-4">
 				<h3>Menu</h3>
