--- a/public/home.html
+++ b/public/home.html
@@ -55,7 +55,7 @@
 							<div class="col-1"></div>
 							<div class="col-sm-3">
 								<div class="card">
-									<img class="card-img-top" src="img/product-image-placeholder.jpg">
+									<img class="card-img-top" src="img/bifao.png">
 									<div class="card-body">
 										<h5 class="card-title">Nome do Produto</h5>
 										<p class="card-text">R$ 10,00</p>
