--- a/public/home.html
+++ b/public/home.html
@@ -11,6 +11,7 @@
 	<!--Links-->
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/fontawesome/css/all.min.css">
+	<link rel="icon" type="image/png" href="img/MercadinhoLigeirinhoIcon.png">
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-success">
