Cams Page Realized
Created Node.Js Script to take information of cams in database and put into the Cams Page;

--- a/public/home.html
+++ b/public/home.html
@@ -14,7 +14,7 @@
 	<link rel="icon" type="image/png" href="img/MercadinhoLigeirinhoIcon.png">
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-success">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-success sticky-top">
 		<div class="container">
 			<a class="navbar-brand" href="/">Mercadinho Ligeirinho</a>
 			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbar">
@@ -26,7 +26,12 @@
 						<a class="nav-link" href="/">Início</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Produtos</a>
+						<div class="dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="prodDrop" data-toggle="dropdown">Produtos</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" href="cams">Câmeras</a>
+							</div>
+						</div>
 					</li>
 				</ul>
 			</div>
@@ -53,108 +58,138 @@
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<div class="row">
-							<div class="col-1"></div>
-							<div class="col-sm-3">
+							<div class="col">
 								<div class="card">
-									<img class="card-img-top" src="img/bifao.png">
+									<img class="card-img-top" src="img/products/CanonEOS450D.png" height="348">
 									<div class="card-body">
-										<h5 class="card-title">Nome do Produto</h5>
-										<p class="card-text">R$ 10,00</p>
-										<a href="#" class="btn btn-success">Comprar</a>
+										<h5 class="card-title">Canon EOS 450D</h5>
+										<p class="card-text">R$ 1339,49</p>
+										<form class="form-inline">
+											<input type="submit" class="btn btn-success" value="Comprar">
+											<input type="number" class="form-control ml-3" placeholder="Quantity" size="2">
+										</form>
 									</div>
 								</div>
 							</div>
-							<div class="col-sm-3">
+							<div class="col">
 								<div class="card">
-									<img class="card-img-top" src="img/product-image-placeholder.jpg">
+									<img class="card-img-top" src="img/products/CanonEOSRebelXT.png" height="348">
 									<div class="card-body">
-										<h5 class="card-title">Nome do Produto</h5>
-										<p class="card-text">R$ 00,00</p>
-										<a href="#" class="btn btn-success">Comprar</a>
+										<h5 class="card-title">Canon EOS Rebel XT</h5>
+										<p class="card-text">R$ 1712,56</p>
+										<form class="form-inline">
+											<input type="submit" class="btn btn-success" value="Comprar">
+											<input type="number" class="form-control ml-3" placeholder="Quantity" size="2">
+										</form>
 									</div>
 								</div>
 							</div>
-							<div class="col-sm-3">
+							<div class="col">
 								<div class="card">
-									<img class="card-img-top" src="img/product-image-placeholder.jpg">
+									<img class="card-img-top" src="img/products/CanonEOS20D.png" height="348">
 									<div class="card-body">
-										<h5 class="card-title">Nome do Produto</h5>
-										<p class="card-text">R$ 00,00</p>
-										<a href="#" class="btn btn-success">Comprar</a>
+										<h5 class="card-title">Canon EOS 20D</h5>
+										<p class="card-text">R$ 799,95</p>
+										<form class="form-inline">
+											<input type="submit" class="btn btn-success" value="Comprar">
+											<input type="number" class="form-control ml-3" placeholder="Quantity" size="2">
+										</form>
 									</div>
 								</div>
 							</div>
 						</div>
+						<hr>
+						<h1>Câmeras</h1>
 					</div>
 					<div class="carousel-item">
 						<div class="row">
-							<div class="col-1"></div>
-							<div class="col-sm-3">
+							<div class="col">
 								<div class="card">
-									<img class="card-img-top" src="img/product-image-placeholder.jpg">
+									<img class="card-img-top" src="img/product-image-placeholder.jpg" height="348">
 									<div class="card-body">
 										<h5 class="card-title">Nome do Produto</h5>
 										<p class="card-text">R$ 00,00</p>
-										<a href="#" class="btn btn-success">Comprar</a>
+										<form class="form-inline">
+											<input type="submit" class="btn btn-success" value="Comprar">
+											<input type="number" class="form-control ml-3" placeholder="Quantity" size="2">
+										</form>
 									</div>
 								</div>
 							</div>
-							<div class="col-sm-3">
+							<div class="col">
 								<div class="card">
-									<img class="card-img-top" src="img/product-image-placeholder.jpg">
+									<img class="card-img-top" src="img/product-image-placeholder.jpg" height="348">
 									<div class="card-body">
 										<h5 class="card-title">Nome do Produto</h5>
 										<p class="card-text">R$ 00,00</p>
-										<a href="#" class="btn btn-success">Comprar</a>
+										<form class="form-inline">
+											<input type="submit" class="btn btn-success" value="Comprar">
+											<input type="number" class="form-control ml-3" placeholder="Quantity" size="2">
+										</form>
 									</div>
 								</div>
 							</div>
-							<div class="col-sm-3">
+							<div class="col">
 								<div class="card">
-									<img class="card-img-top" src="img/product-image-placeholder.jpg">
+									<img class="card-img-top" src="img/product-image-placeholder.jpg" height="348">
 									<div class="card-body">
 										<h5 class="card-title">Nome do Produto</h5>
 										<p class="card-text">R$ 00,00</p>
-										<a href="#" class="btn btn-success">Comprar</a>
+										<form class="form-inline">
+											<input type="submit" class="btn btn-success" value="Comprar">
+											<input type="number" class="form-control ml-3" placeholder="Quantity" size="2">
+										</form>
 									</div>
 								</div>
 							</div>
 						</div>
+						<hr>
+						<h1>Frutas</h1>
 					</div>
 					<div class="carousel-item">
 						<div class="row">
-							<div class="col-1"></div>
-							<div class="col-sm-3">
+							<div class="col">
 								<div class="card">
-									<img class="card-img-top" src="img/product-image-placeholder.jpg">
+									<img class="card-img-top" src="img/product-image-placeholder.jpg" height="348">
 									<div class="card-body">
 										<h5 class="card-title">Nome do Produto</h5>
 										<p class="card-text">R$ 00,00</p>
-										<a href="#" class="btn btn-success">Comprar</a>
+										<form class="form-inline">
+											<input type="submit" class="btn btn-success" value="Comprar">
+											<input type="number" class="form-control ml-3" placeholder="Quantity" size="2">
+										</form>
 									</div>
 								</div>
 							</div>
-							<div class="col-sm-3">
+							<div class="col">
 								<div class="card">
-									<img class="card-img-top" src="img/product-image-placeholder.jpg">
+									<img class="card-img-top" src="img/product-image-placeholder.jpg" height="348">
 									<div class="card-body">
 										<h5 class="card-title">Nome do Produto</h5>
 										<p class="card-text">R$ 00,00</p>
-										<a href="#" class="btn btn-success">Comprar</a>
+										<form class="form-inline">
+											<input type="submit" class="btn btn-success" value="Comprar" height="348">
+											<input type="number" class="form-control ml-3" placeholder="Quantity" size="2">
+										</form>
 									</div>
 								</div>
 							</div>
-							<div class="col-sm-3">
+							<div class="col">
 								<div class="card">
-									<img class="card-img-top" src="img/product-image-placeholder.jpg">
+									<img class="card-img-top" src="img/product-image-placeholder.jpg" height="348">
 									<div class="card-body">
 										<h5 class="card-title">Nome do Produto</h5>
 										<p class="card-text">R$ 00,00</p>
-										<a href="#" class="btn btn-success">Comprar</a>
+										<form class="form-inline">
+											<input type="submit" class="btn btn-success" value="Comprar">
+											<input type="number" class="form-control ml-3" placeholder="Quantity" size="2">
+										</form>
 									</div>
 								</div>
 							</div>
 						</div>
+						<hr>
+						<h1>Pães</h1>
 					</div>
 				</div>
 			</div>
@@ -177,9 +212,9 @@
 			<div class="col-sm-4">
 				<h3>Menu</h3>
 				<div class="list-group text-center">
-					<a class="list-group-item list-group-item-action list-group-item-primary" href="#">Voltar ao Topo</a>
-					<a class="list-group-item list-group-item-action list-group-item-primary" href="#">Produtos</a>
-					<a class="list-group-item list-group-item-action list-group-item-primary" data-toggle="modal" data-target="#modal" href="#">Localização</a>
+					<a class="list-group-item list-group-item-action list-group-item-success" href="#">Voltar ao Topo</a>
+					<a class="list-group-item list-group-item-action list-group-item-success" href="#">Produtos</a>
+					<a class="list-group-item list-group-item-action list-group-item-success" data-toggle="modal" data-target="#modal" href="#">Localização</a>
 				</div>
 			</div>
 			<div class="col-sm-4">
