--- a/public/cams.html
+++ b/public/cams.html
@@ -47,9 +47,11 @@
 			</form>
 		</div>
 	</nav>
-
-	<!--Content Here-->
-
+	<div class="container my-5 container-fluid">
+		<div class="row" id="cams">
+			
+		</div>
+	</div>
 	<div class="container">
 		<div class="row">
 			<div class="col-12 mb-3"><hr></div>
@@ -102,5 +104,6 @@
 	<script type="text/javascript" src="assets/js/jquery.min.js"></script>
 	<script type="text/javascript" src="assets/js/bootstrap.bundle.min.js"></script>
 	<script type="text/javascript" src="assets/fontawesome/js/all.min.js"></script>
+	<script type="text/javascript" src="js/cams.js"></script>
 </body>
 </html>
