Search System Realized
Search Page search in database for products;

--- a/public/search.html
+++ b/public/search.html
@@ -49,12 +49,11 @@
 	</nav>
 	<div class="jumbotron jumbotron-fluid">
 		<div class="container">
-			<h1 class="display-4">Câmeras</h1>
-			<p class="lead">Câmeras de ótima qualidade especialmente selecionadas para <b>você</b></p>
+			<h1 class="display-4" id="searchItem">Pesquisa por ...</h1>
 			<hr class="my-4">
 		</div>
 		<div class="container">
-			<div class="row" id="cams">
+			<div class="row" id="search">
 				
 			</div>
 		</div>
@@ -111,6 +110,6 @@
 	<script type="text/javascript" src="assets/js/jquery.min.js"></script>
 	<script type="text/javascript" src="assets/js/bootstrap.bundle.min.js"></script>
 	<script type="text/javascript" src="assets/fontawesome/js/all.min.js"></script>
-	<script type="text/javascript" src="js/cams.js"></script>
+	<script type="text/javascript" src="js/search.js"></script>
 </body>
 </html>
