--- a/public/assets/navbar.html
+++ b/public/assets/navbar.html
@@ -35,12 +35,12 @@
 					</li>
 				</ul>
 			</div>
-			<form class="form-inline">
+			<form class="form-inline" action="search" method="get">
 				<div class="input-group">
-					<input type="search" class="form-control" id="search-item" placeholder="Buscar..." size="30">
+					<input type="search" class="form-control" name="q" placeholder="Buscar..." size="20">
 					<div class="input-group-prepend">
 						<label for="search-item">
-							<span class="input-group-text"> <i class="fas fa-search"></i> </span>
+							<input class="input-group-text" type="submit" value="Buscar">
 						</label>
 					</div>
 				</div>
