nova pag ao clicar em mercadinho
ve o que vc acha

--- a/public/home.html
+++ b/public/home.html
@@ -16,7 +16,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-success sticky-top">
 		<div class="container">
-			<a class="navbar-brand" href="/">Mercadinho Ligeirinho</a>
+			<a class="navbar-brand" href="market.html">Mercadinho Ligeirinho</a>
 			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbar">
 				<span class="navbar-toggler-icon"></span>
 			</button>
