--- a/public/market.html
+++ b/public/market.html
@@ -16,7 +16,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-success sticky-top">
 		<div class="container">
-			<a class="navbar-brand" href="market.html">Mercadinho Ligeirinho</a>
+			<a class="navbar-brand" href="/">Mercadinho Ligeirinho</a>
 			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbar">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -49,15 +49,13 @@
 	</nav>
 	<div class="jumbotron jumbotron-fluid">
 		<div class="container">
-			<h1 class="display-4">Câmeras</h1>
-			<p class="lead">Câmeras de ótima qualidade especialmente selecionadas para <b>você</b></p>
+			<h1 class="display-4">Bem Vindo!</h1>
+			<p class="lead">Eu sou o Mercadinho-ligeirinho feito para ajudar <b>você</b></p>
 			<hr class="my-4">
-		</div>
-		<div class="container">
-			<div class="row" id="cams">
-				
-			</div>
-		</div>
+			<p class="lead">Todos os dias tenho varias promoções em diversos produtos, além de ser feito especialmente para sua família.</p>
+			<p class="lead">Se quiser saber mais sobre mim clique abaixo:</p>
+			<button class="btn btn-primary btn-lg mt-2">Saber mais</button><a href="cams.html"><button class="btn btn-primary btn-lg mt-2 ml-2">Ver produtos</button></a>
+		</div>		
 	</div>
 	<div class="container">
 		<div class="row">
@@ -70,8 +68,8 @@
 			<div class="col-sm-4">
 				<h3>Menu</h3>
 				<div class="list-group text-center">
-					<a class="list-group-item list-group-item-action list-group-item-success" href="#">Voltar ao Topo</a>
-					<a class="list-group-item list-group-item-action list-group-item-success" href="#">Produtos</a>
+					<a class="list-group-item list-group-item-action list-group-item-light disabled" href="#">Voltar ao Topo</a>
+					<a class="list-group-item list-group-item-action list-group-item-light disabled" href="#">Produtos</a>
 					<a class="list-group-item list-group-item-action list-group-item-success" data-toggle="modal" data-target="#modal" href="#">Localização</a>
 				</div>
 			</div>
@@ -111,6 +109,5 @@
 	<script type="text/javascript" src="assets/js/jquery.min.js"></script>
 	<script type="text/javascript" src="assets/js/bootstrap.bundle.min.js"></script>
 	<script type="text/javascript" src="assets/fontawesome/js/all.min.js"></script>
-	<script type="text/javascript" src="js/cams.js"></script>
 </body>
 </html>
